--- a/guardaropaoutlet.html
+++ b/guardaropaoutlet.html
@@ -32,11 +32,11 @@
                                 <div class="dd-inner">
                                     <div class="column">
                                         <h3>Hombre</h3>
-                                        <a href="Bolsos.html">Polos</a>
-                                        <a href="Bolsos.html">Pantalones</a>
-                                        <a href="Bolsos.html">Billeteras</a>
-                                        <a href="Bolsos.html">Bóxer</a>
-                                        <a href="Bolsos.html">Medias</a>                       
+                                        <a href="PolosHombres.html">Polos</a>
+                                        <a href="PantalonesHombres.html">Pantalones</a>
+                                        <a href="Billeteras.html">Billeteras</a>
+                                        <a href="Boxer.html">Bóxer</a>
+                                        <a href="MediasHombres.html">Medias</a>                       
                                     </div>                    
                                     <div class="column column260 mayHide">
                                         <br><img width="100" src="images/Hombre.jpg" />
@@ -52,9 +52,9 @@
                                     <div class="column">
                                         <h3>Mujer</h3>
                                         <a href="Bolsos.html">Bolsos y Billeteras</a>
-                                        <a href="Bolsos.html">Belleza</a>
-                                        <a href="Bolsos.html">Pantalones</a>
-                                        <a href="Bolsos.html">Chaquetas</a>                        
+                                        <a href="Belleza.html">Belleza</a>
+                                        <a href="PantalonesMujeres.html">Pantalones</a>
+                                        <a href="Chaquetas.html">Chaquetas</a>                        
                                     </div>
                                      <div class="column column260 mayHide">
                                         <br><img width="100" src="images/Mujer.jpg" />
@@ -117,28 +117,28 @@ box-shadow:0 0 35px rgba(0,0,0,.4);">
    
     <section style="background:transparent;width:100%;">
         <div style="margin:0 auto;max-width:1040px;">           
-            <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+            <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/Tommy-hilfiger-logo-7.png" title="Hombre"></div>
             </div>
-             <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+             <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/ralph-lauren-logo.png" title="Mujer"></div>                  
             </div>
-            <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+            <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/Gap_logo.png" title="Perfumeria"></a></div>
             </div>
-            <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+            <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/Columbia_logo.png" title="Visitanos"></div>
             </div>
-             <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+             <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/levis_logo.png" title="Visitanos"></div>
             </div>
-             <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+             <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/nautica_logo.jpg" title="Visitanos"></div>
             </div>
-            <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+            <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/Reebok_logo.png" title="Visitanos"></div>
             </div>
-             <div style="width:120px;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
+             <div style="width:11%;float:left;margin:5px;padding:5px;border:1px solid #ddd;">
                 <div><img width="100%" src="images/logo_fossil.png" title="Visitanos"></div>
             </div>
         </div>
